sort.baseball.NaiveBaseball.scala.error
Erreur de compilation :
NaiveBaseball:10: error: ';' expected but '=' found.
        if(d>dMax){(bas,posi)=(base,position)}
                             ^