sort.baseball.NaiveBaseball.scala.code
override def run() {
	val NbB=getNombreBases()
  do{
    var trouB=(getTrouBase()+1)%NbB
    var dMax=0
    var (bas,posi)=(getTrouBase(),getTrouPosition())
    for (base<-0 to 3){
      for (position<-0 to 1){
        var d=(getCouleurJoueur(base,position)-base)%4
        if(d>dMax){(bas,posi)=(base,position)}
      }
    }
    deplace(bas,posi)
  }while(!estTrie())
}